updated requirements and added output sample

--- a/Code/requirements.txt
+++ b/Code/requirements.txt
@@ -1,47 +1,5 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=conda_forge
-_openmp_mutex=4.5=2_gnu
-amply=0.1.6=pyhd8ed1ab_1
-bzip2=1.0.8=h5eee18b_6
-ca-certificates=2024.12.14=hbcca054_0
-coincbc=2.10.5=hab63836_1
-docutils=0.21.2=pyhd8ed1ab_1
-gurobi=11.0.2=py312_0
-highspy=1.9.0=np20py312h6792212_0
-ld_impl_linux-64=2.40=h12ee557_0
-libblas=3.9.0=8_openblas
-libcblas=3.9.0=8_openblas
-libexpat=2.6.2=h59595ed_0
-libffi=3.4.4=h6a678d5_1
-libgcc=14.2.0=h77fa898_1
-libgcc-ng=14.2.0=h69a702a_1
-libgfortran-ng=7.5.0=h14aa051_20
-libgfortran4=7.5.0=h14aa051_20
-libgomp=14.2.0=h77fa898_1
-liblapack=3.9.0=8_openblas
-libnsl=2.0.1=hd590300_0
-libopenblas=0.3.12=pthreads_hb3c22a3_1
-libsqlite=3.46.0=hde9e2c9_0
-libstdcxx=14.2.0=hc0a3c3a_1
-libstdcxx-ng=11.2.0=h1234567_1
-libuuid=2.38.1=h0b41bf4_0
-libxcrypt=4.4.36=hd590300_1
-libzlib=1.2.13=h4ab18f5_6
-ncurses=6.5=h59595ed_0
-numpy=2.2.1=py312h7e784f5_0
-openssl=3.4.0=h7b32b05_1
-pip=24.2=py312h06a4308_0
-pulp=2.8.0=py312h7900ff3_0
-pyparsing=3.2.1=pyhd8ed1ab_0
-python=3.12.3=hab00c5b_0_cpython
-python_abi=3.12=5_cp312
-readline=8.2=h5eee18b_0
-setuptools=75.1.0=py312h06a4308_0
-sortedcontainers=2.4.0=pyhd3eb1b0_0
-tk=8.6.14=h39e8969_0
-tzdata=2024b=h04d1e81_0
-wheel=0.44.0=py312h06a4308_0
-xz=5.4.6=h5eee18b_1
-zlib=1.2.13=h4ab18f5_6
+gurobipy==12.0.3
+highspy==1.11.0
+numpy==2.3.2
+PuLP==3.2.2
+sortedcontainers==2.4.0
